--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,18 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "express-day03",
+      "cwd": "${workspaceFolder}\\express\\day03",// 可执行程序的启动路径
+      "program": "${workspaceFolder}\\express\\day03\\index.js",
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
+    },
+    
     {
       "type": "node",
       "request": "launch",
