--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,18 +4,26 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "启动程序2",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "cwd": "${workspaceFolder}\\ssr", // 可执行程序的启动路径
+      "program": "${workspaceFolder}\\ssr\\webpack\\launch.server.js"
+    },
     {
       "type": "node",
       "request": "launch",
       "name": "express-day03",
-      "cwd": "${workspaceFolder}\\express\\day03",// 可执行程序的启动路径
+      "cwd": "${workspaceFolder}\\express\\day03", // 可执行程序的启动路径
       "program": "${workspaceFolder}\\express\\day03\\index.js",
       "skipFiles": [
         "<node_internals>/**"
       ]
     },
-    
     {
       "type": "node",
       "request": "launch",
@@ -23,7 +31,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "cwd": "${workspaceFolder}\\uploadFile",// 可执行程序的启动路径
+      "cwd": "${workspaceFolder}\\uploadFile", // 可执行程序的启动路径
       "program": "${workspaceFolder}\\uploadFile\\server.js"
     }
   ]
