--- a/ssr/package.json
+++ b/ssr/package.json
@@ -18,7 +18,9 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/runtime": "^7.14.6",
     "@babel/runtime-corejs3": "^7.14.6",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "cookies": "^0.8.0",
     "happypack": "^5.0.1",
     "koa": "^2.13.1",
     "react": "^17.0.2",
